--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,19 @@
-#logo img{
+.navbar-brand img{
     width: 40%;
 }
 .center{
     text-align: center;
-    margin-top: 1rem;
+    margin: 0 auto;
+    width:100%
+}
+#content ul>li+li{
+    margin-left: 2em;
+}
+#nav{
+    width: 100%;
+    background-color: #f8f9fa;
+}
+.right{
+    width: 30%;
+    margin: 0 auto;
 }
