--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+/* 轮播图 */
 .carousel-inner img{
     width:100%;
     max-width: 100%;
@@ -19,4 +20,80 @@
 .carousel-inner div{
     width: 100%;
     height: 560px;
+}
+/* 客户满意 */
+.title{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    color:#2f2f2f;
+    text-align: center;
+}
+.p-style{
+    margin-top: 3rem;
+    font-size: 16px;
+    text-align: center;
+    color:#7d7d7d;
+}
+.row{
+    margin-left: 3rem;
+    margin-right: 3rem;
+}
+.ul-item{
+    float: left;
+    justify-content: space-around;
+}
+.float{
+    float: left;
+}
+.kuang{
+    border: 1px solid #f4f4f4;
+    padding: 45px 0px 10px 0px;
+}
+.kuang  img{
+    vertical-align: middle;
+    margin: 0 auto;
+    width: 80px;
+    height: 85px;
+}
+.img{
+    margin: 10px auto;
+    width: 80px;
+    height: 85px;
+}
+.kuang span h2 a{
+    font-size: 16px;
+    display: block;
+    text-align: center;
+    color: #464646;
+    padding-top: 1em
+}
+.kuang span p{
+    text-transform: uppercase;
+    text-align: center;
+    color: #464646;
+    padding: 5px 49px
+}
+/* 拍摄推荐 */
+.bg{background-color: #F4F4F4;}  
+.paishe>h2{
+    font-size: 40px;
+    margin-bottom: 20px;
+    line-height: 1.5;
+    color: #000;
+   
+}  
+.paishe p{
+    font-size: 18px;
+    line-height: 1.5;
+    color: #828282;
+}
+.work{
+    position: relative;
+}
+.work-item{
+    color: #f7f7f7;
+    position: absolute;
+    left: 4rem;
+    top: 12rem;
 }
