--- a/css/index.css
+++ b/css/index.css
@@ -19,7 +19,7 @@
 }
 .carousel-inner div{
     width: 100%;
-    height: 560px;
+    height:550px;
 }
 /* 客户满意 */
 .title{
@@ -38,6 +38,7 @@
 .row{
     margin-left: 3rem;
     margin-right: 3rem;
+    justify-content: space-between;
 }
 .ul-item{
     float: left;
